Backporting Minor enhancement #5917 JS API : Context switching on backend doesn't reflect on contents on frontend. Providing a new option on JS API to let user synchonize the context between frontend (JS API) and backend.

--- a/packages/web_services/js_api/locale/en/lang_screen_details.xml
+++ b/packages/web_services/js_api/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.22.2.3 2012/09/24 06:42:13 akarelia Exp $
+* $Id: lang_screen_details.xml,v 1.22.2.4 2012/10/25 00:41:38 akarelia Exp $
 *
 */
 -->
@@ -246,6 +246,10 @@
         <field attribute="set_context">
             <display_name>Set Context</display_name>
             <note />
+        </field>
+        <field attribute="sync_context">
+            <display_name>Sync Context</display_name>
+            <note>Enabling this option will synchronise the context on backend and the JS API frontend. I.e. changing/restoring context via JS API will be reflected on backend too and vice versa.</note>
         </field>
     </section>
 </contents>
