--- a/packages/cms/listing_engine/locale/en/lang_strings.xml
+++ b/packages/cms/listing_engine/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.40 2010/01/25 06:01:12 ewang Exp $
+* $Id: lang_strings.xml,v 1.40.16.1 2012/11/06 02:43:05 ewang Exp $
 *
 *
 * CMS Package Localised Strings File
@@ -39,6 +39,7 @@
 <string source="cms_listing_root_node_link_desc">The root node of the Asset Listing</string>
 <string source="cms_listing_cannot_delete_type_formats_link">You cannot delete the link between the type formats folder and the %s page</string>
 <string source="cms_listing_cannot_delete_position_formats_link">You cannot delete the link between the position formats folder and the %s page</string>
+<string source="cms_listing_cannot_delete_group_formats_link">You cannot delete the link between the group formats folder and the %s page</string>
 <string source="cms_listing_asset_contents">Asset Contents (including paintlayout)</string>
 <string source="cms_listing_asset_contents_paint">Asset Contents (user-defined paint layout)</string>
 <string source="cms_listing_asset_contents_raw">Asset Contents (excluding paintlayout)</string>
