--- a/packages/news/locale/en/lang_strings.xml
+++ b/packages/news/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.2 2006/12/20 06:07:52 arailean Exp $
+* $Id: lang_strings.xml,v 1.2.30.1 2012/11/14 02:41:39 akarelia Exp $
 *
 *
 * CMS Package Localised Strings File
@@ -22,7 +22,7 @@
 	<!-- Comment Preferences -->
 	<string source="comment_pref_input_size">Input Box Size</string>
 	<string source="comment_pref_max_length">Maximum Comment Length</string>
-	<string source="comment_pref_max_length_note">This setting limits the number of charaters that may be entered in the comment input box. When the value is zero, this option will be ignored.</string>
+	<string source="comment_pref_max_length_note">This setting limits the number of characters that may be entered in the comment input box. When the value is zero, this option will be ignored.</string>
 
 	<string source="comment_pref_html_conf_label">HTML in comments</string>
 
