--- a/core/locale/en/lang_errors.xml
+++ b/core/locale/en/lang_errors.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_errors.xml,v 1.143.2.1 2012/10/23 23:07:09 akarelia Exp $
+* $Id: lang_errors.xml,v 1.143.2.2 2012/11/15 03:14:15 akarelia Exp $
 *
 */
 
@@ -1427,6 +1427,7 @@ Full Node Contents %3$s</error>
 	<error code="SYS0330">Unable to set a layout, no URL has been assigned to the asset</error>
 
 	<error code="SYS0346">Unable to filter content of attribute "%1$s" of asset type "%2$s"</error><!-- core/include/asset.inc: -->
+	<error code="SYS0347">Unable to filter content of Metadata Field "%1$s" of Type "%2$s"</error><!-- core/include/asset.inc: -->
 
 	<!-- Apache Configuration Errors -->
 	<error code="SYS0314">Cannot set request note name for "%s". A request note with this name already exists.</error>
